# Gauss-Distribution-Trace-Generation

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  Trace.md  generate.cpp  necessary.h
include/: curve.hpp  simulation.hpp  vec2.hpp
src/: curves.cpp  simulation.cpp
tests/: smoke_tests.cpp
